# indra_netra

./: .gitattributes  .gitignore  ARCHITECTURE_DIAGRAMS.md  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LIVE_MONITORING_README.md  PROJECT_CHECKLIST.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  package-lock.json  setup_live_monitoring.sh
backend/: API_TESTING_WITH_DUMMY_DATA.md  POSTMAN_COLLECTION.json  README.md  package-lock.json  package.json  seed.js  server.js
backend/controllers/: authController.js  crowdController.js  eventController.js  gateController.js  inferenceController.js
backend/middleware/: validation.js
backend/models/: Alert.js  Camera.js  CrowdMetrics.js  Event.js  Gate.js  PanicDetection.js  User.js
backend/routes/: authRoutes.js  crowdRoutes.js  eventRoutes.js  gateRoutes.js  inferenceRoutes.js
backend/utils/: qrAndCrowd.js
backend/websocket/: cameraHandler.js
frontend/: package-lock.json  package.json
frontend/.next/dev/: prerender-manifest.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx
frontend/app/user/: layout.tsx
frontend/components/admin/: sidebar.tsx
frontend/hooks/: useAuth.ts  useCrowdData.ts
frontend/services/: authService.ts  crowdService.ts  notificationService.ts  qrService.ts  socketService.ts
frontend/types/: index.ts  qrcode.react.d.ts
model/: detections.json  detections.txt  extract_features.py  feed.py  heatmap.py  panic_lstm_model.h5  process_frame.py  pyproject.toml  resnet-lstm.py  run_inference.py  run_sahi.py
(+155 files in other folders)
